--- a/Assignment1_WEB(frontend).html
+++ b/Assignment1_WEB(frontend).html
@@ -110,7 +110,7 @@
         </table>
     </div>
     <div> <!-- This is the step 8. The forms --> 
-        <form method="post"> <!-- Форма для заполнения пользователем регистрации -->
+        <form method="post"> 
             <div align="center">
                 <label style="font-size: 20px" for="f.i.o"> Full Name </label>
                 <input style="font-size: 20px" id="f.i.o" type="text" placeholder="Санжар Байсериков Уалиханович">
@@ -149,4 +149,5 @@
         </form>
     </div>
 </body>
+
 </html>
