--- a/Assignment1_WEB(frontend).html
+++ b/Assignment1_WEB(frontend).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- Пипец я все еще здесь да?) -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -151,3 +151,4 @@
 </body>
 
 </html>
+
